--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <h1>Home</h1>
+  <main>
+    <form action="/login" method="POST">
+      <h3>Traditional Form</h3>
+      <div class="form-row">
+        <label for="name">Enter name</label>
+        <input type="text" name="name" id="name" autocomplete="false" />
+      </div>
+      <button type="submit" class="block">Submit</button>
+    </form>
+  </main>
 </body>
 </html>
